--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
         <!-- Карточки изображений -->
       </div>
         </div>
-      <button type="button" class="load-more">Load more</button>
+        <div class="button-box ">
+          <button type="button" class="load-more">Load more</button>
+        </div>
+      
   
     <script src="./index.js"></script>
   </body>
