--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       </div>
         </div>
         <div class="button-box ">
-          <button type="button" class="load-more">Load more</button>
+          <button type="button" class="load-more is-hidden">Load more</button>
         </div>
       
   
